FIX IT20 List horizontal scroll bar should disappear when unnecessary

--- a/app/style/2020/list.scss
+++ b/app/style/2020/list.scss
@@ -28,7 +28,7 @@ main > article[data-action="list"] {
 			border-collapse: collapse;
 			display: block;
 			grid-area: table;
-			margin: 0 -1px -1px 0;
+			margin-bottom: -1px;
 			overflow-y: auto;
 
 			tr {
